Try to extend project by design pattern in controller DB and http request will spread each other

--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "babenkoivan/telegram-notifications": "^1.1",
         "doctrine/dbal": "*",
         "guzzlehttp/guzzle": "^7.2",
+        "irazasyed/telegram-bot-sdk": "^3.9",
+        "laravel-notification-channels/telegram": "^3.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.1",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "1.0"
     },
