Using github.com/LaravelDaily/laravel-charts for Illutrating charts. 1) Fetching data from user model and exhebeting results in three charts 2) At the next time, try to use Redis instead og MySQL

--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
         "babenkoivan/telegram-notifications": "^1.1",
         "doctrine/dbal": "*",
         "guzzlehttp/guzzle": "^7.2",
+        "imanghafoori/laravel-decorator": "^1.0",
         "irazasyed/telegram-bot-sdk": "^3.9",
         "laravel-notification-channels/telegram": "^3.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
+        "laraveldaily/laravel-charts": "^0.1.29",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "1.0"
     },
